[project]
name = "check-updates"
version = "0.1.0"
description = "Check updates for packages"
authors = [
    { name = "Adonis Ling", email = "adonis0147@gmail.com" }
]
dependencies = [
    "packaging>=23.2",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
check_updates = "check_updates:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "python-lsp-server[all]>=1.10.0",
    "pylsp-mypy>=0.6.8",
    "types-requests>=2.31.0.20240218",
    "python-lsp-ruff>=2.1.0",
    "python-lsp-isort>=0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/check_updates"]
