[project]
name = "check-updates"
version = "0.1.0"
description = "Check updates for packages"
readme = "README.md"
authors = [
    { name = "Adonis Ling", email = "adonis0147@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "lxml>=6.0.2",
    "packaging>=25.0",
    "pycurl>=7.45.7",
    "requests>=2.32.5",
    "types-lxml>=2026.1.1",
    "types-pycurl>=7.45.7.20251101",
]

[project.scripts]
check_updates = "check_updates:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pylsp-mypy>=0.7.0",
    "python-lsp-isort>=0.2.1",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server[all]>=1.13.1",
    "types-requests>=2.32.4.20250913",
]
